Text z-index fixes

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -18,7 +18,7 @@ nav {
     padding-bottom: calc(60vh - 56px);
     background: linear-gradient(to bottom, #00000050 30%, transparent);
     position: absolute;
-    z-index: 99;
+    z-index: 7;
 
     .logo a,
     .mobile-menu__open,
